# league-of-legends-esports-calendar

./: .gitignore  LICENSE  README.md  generate_calendar.py  generate_data.py  leagues.json  package-lock.json  package.json  pyproject.toml  scrape_teams.py  teams.json  tsconfig.json  wrangler.toml
.claude/: settings.local.json
.github/workflows/: update-calendar.yml  update-data.yml
functions/: image-proxy.ts
functions/api/: calendar.ts
functions/data/: [[path]].ts
public/: app.js  index.html  styles.css
public/data/: all_knights.json  apex_predator.json  bilibili_gaming.json  brion.json  cag_osaka.json  clocks.json  cloud9.json  ctbc_flying_oyster_academy.json  cybercore_esports.json  deep_cross_gaming.json  dignitas.json  disguised.json  dplus.json  drx.json  edward_gaming.json  estral_esports.json  fearx.json  fluxo_w7m.json  flyquest.json  fnatic.json  frank_esports.json  furia.json  g2_esports.json  gen.g_esports.json  genz_gaming.json  giantx.json  ground_zero_gaming.json  hanwha_life_esports.json  hell_pigs.json  inferno_drive_tokyo.json  infinity.json  invictus_gaming.json  isurus_gaming.json  jd_gaming.json  karmine_corp.json  karmine_corp_blue.json  keyd_stars.json  kt_rolster.json  l_guide_gaming.json  leagues.json  (+42 more)
src/: __init__.py  cache.py  calendar_gen.py  feeds.py  html_gen.py  notify.py  scraper.py
tests/: calendar.test.ts  image-proxy.test.ts  test_scraper.py
tests/fixtures/: los_ratones_page.html
